fixed text spacing

--- a/user/themes/agency/css-compiled/global.css
+++ b/user/themes/agency/css-compiled/global.css
@@ -6119,5 +6119,5 @@ body {
   text-decoration: none; }
 
 .instagram-feed .carousel-item p {
-  margin-top: 15px;
+  margin: 15px 10px 10px;
   color: #333; }
