--- a/user/themes/agency/scss/agency.scss
+++ b/user/themes/agency/scss/agency.scss
@@ -1285,7 +1285,7 @@ body {
          text-decoration: none;
         }
         p {
-            margin-top: 15px;
+            margin: 15px 10px 10px;
             color:$secondary-dark;
         }
     }
